Fixed some old bugs, implemented wire perfect has method, implemented primary input (/output) lookup generation, inserted core names for fiction

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ super-tile_layout_generator
 supertile_layout_generator
 1in1out_super-tile_layouts.json
 2in1out_super-tile_layouts.json
+1in0out_super-tile_layouts.json
+1in1out_supertile_layouts.json
+2in1out_supertile_layouts.json
+1in0out_supertile_layouts.json
 
 # Prerequisites
 *.d
