Added Inverter generation, since they can't be handled exactly like wires (one entry (5in 0 out) is still bugged)

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ supertile_layout_generator
 2in1out_super-tile_layouts.json
 1in0out_super-tile_layouts.json
 1in1out_supertile_layouts.json
+1in1outWIRE_supertile_layouts.json
+1in1outINVERTER_supertile_layouts.json
 2in1out_supertile_layouts.json
 1in0out_supertile_layouts.json
 
