Added new goClockwise() method to fix inverter layout generation problem, tho I have no clue how the old one even works (it can't be replaced for generating the original Y-shaped gates without generating errors, even tho it makes little sense, propably to highly specialised for it's task)

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ supertile_layout_generator
 1in1outINVERTER_supertile_layouts.json
 2in1out_supertile_layouts.json
 1in0out_supertile_layouts.json
+0in1out_supertile_layouts.json
 
 # Prerequisites
 *.d
