Implemented the other required and reworked generation functions in python, Added diagonal inverter cores. Still needs to be tested tho

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ supertile_layout_generator
 2in1out_supertile_layouts.json
 1in0out_supertile_layouts.json
 0in1out_supertile_layouts.json
+supertile_lookup_tables.hpp
 
 # Prerequisites
 *.d
